--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,6 +2,21 @@
 
 {% block main %}
 <h1 class="page-header">Flask Starter Code</h1>
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                
+                    {% for category, message in messages %}
+                        {% if category == 'success' %}
+                            <div class="form-group-sm alert alert-success">
+                                <strong>Success!</strong> {{ message }} .
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                
+            {% endif %}
+        {% endwith %}
+    
 <p class="lead">Use this starter template for your Flask apps as a way to quickly start any new project.<br>
 All you get are these files and mostly barebones HTML/CSS files.</p>
 {% endblock %}
